-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 181002) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

18102002 (v2.2.0-pre2)
	- fixed: ALSA objects weren't properly registered as audio
		 object types
	- fixed: debug level was resetted to 0 after issuing
		 'int-output-mode-wellformed'
	- fixed: automake complained about multiple definition
	 	 of ecasoundc_sa
17102002 (v2.2.0-pre1)
	- edi-entries: edi-24, edi-28, edi-29, edi-30
	- note: libecasound and libkvutils interface version numbers
		will from now on track API changes instead of ABI
	        changes
	- added: edi-24; resample audio object added
	- added: edi-29; initial version of ecamonitor
	- added: edi-28; eiam-command 'int-output-mode-wellformed'
	- removed: edi-30; ecasound internal plugins no longer
		   installed separately
	- changed: ALSA support requires alsa-lib version 
		   0.9rc4 or newer
	- changed: libecasoundc versioning back to normal libtool 
		   style; interface version reverted back to 1:0:0
	- changed: edi-28; C implementation of ECI, libecasoundc, 
	           is rewritten to not depend on libecasound
	- changed: edi-28; pyecasound is rewritten to use the 
	           new C ECI implementation instead of direct
		   use of libecasound
	- changed: edi-30; removed all shared libs and subpackages
	  	   containing them from ecasound.spec.in