@@ -23,7 +23,7 @@ echo "------------------------------------------------------------------"
 dnl ---
 dnl Init automake
 dnl ---
-AM_INIT_AUTOMAKE(ecasound, 2.2.0-pre2)
+AM_INIT_AUTOMAKE(ecasound, 2.2.0-pre3)
 AM_CONFIG_HEADER(config.h)
 
 dnl ---
